# elden-ring-coop-launcher

./: AGENTS.md  README.md  pyproject.toml
launcher/: __init__.py  __main__.py  cli.py  config.py  constants.py  game.py  me3_manager.py  mod_manager.py  platform_detect.py  profile.py
